--- a/src/main/java/com/view/RegistrationForm.form
+++ b/src/main/java/com/view/RegistrationForm.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.view.RegistrationForm">
-  <grid id="27dc6" binding="signUpForm" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="signUpForm" layout-manager="GridLayoutManager" row-count="8" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="320"/>
+      <xy x="20" y="20" width="500" height="343"/>
     </constraints>
     <properties/>
     <border type="none" title="Sign up" title-justification="2" title-position="1">
@@ -108,7 +108,15 @@
           <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="register"/>
+          <text value="Sign up"/>
+        </properties>
+      </component>
+      <component id="5829b" class="javax.swing.JButton" binding="returnButton">
+        <constraints>
+          <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
         </properties>
       </component>
     </children>
