--- a/src/main/java/com/view/SignInForm.form
+++ b/src/main/java/com/view/SignInForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.view.SignInForm">
-  <grid id="27dc6" binding="signInForm" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="signInForm" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="518" height="235"/>
@@ -57,7 +57,15 @@
         <properties>
           <horizontalAlignment value="0"/>
           <horizontalTextPosition value="2"/>
-          <text value="login"/>
+          <text value="Login"/>
+        </properties>
+      </component>
+      <component id="30fcf" class="javax.swing.JButton" binding="returnButton">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
         </properties>
       </component>
     </children>
